<resources>
    <string name="app_name">Shopm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shop Manager 1.0</string>
    <string name="nav_header_subtitle">developed by drrhyf@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Parametres</string>
    <string name="strHome">Home</string>
    <string name="strSettings">Parametres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="low_storage_error">Low storage error</string>
    <string name="no_camera_permission">No camera permission</string>
    <string name="ok">OK</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">Barcode error format</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Recherche</string>
    <string name="setTitleServerIP">Server IP</string>
    <string name="strSellItem">Sell Item</string>
    <string name="strSells">Ventes</string>
    <string name="setTitleExchRate">1 USD in CDF</string>
    <string name="action_scan_item">Scan Item</string>
    <string name="btn_confirm_sell">SELL ITEM!</string>
    <string name="setTitleMaxSellableItem">Nombre d\'achat max.</string>
    <string name="msgItemSoldOutText">Sorry this item has been sold out. Please update the stock amount!</string>
    <string name="msgItemSoldOutTitle">ITEM OUT SOLD OUT</string>
    <string name="msgNoConnection">Please check make sure your WIFI is turned on, and you are connected to the server.</string>
    <string name="errorLoadingItems">Error loading sellsItems : \"%1$s\".\nPlease check :\n\n1. Your connection to the server, deactivate mobile and turn on WiFi.\n2. Check for correct server IP address in your settings, current IP : %2$s, is it the same with the server IP?</string>
    <string name="addItem">Ajouter Article</string>
    <string name="strItemName">Nom de l\'article</string>
    <string name="strItemPrice">Prix de vente</string>
    <string name="strItemInitStock">Stock Initial</string>
    <string name="strItemDesc">Description</string>
    <string name="strItemPic">Photo</string>
    <string name="btnAddItem">Ajouter Article</string>
    <string name="chosePick">Choisir photo</string>
    <string name="strStock">Mon stoque</string>
    <string name="btnRetry">SCANNER QR SERVEUR</string>
    <string name="strAllFieldsMedatory">Tous les champs sont obligatoires apart la photo.</string>
    <string name="btnEditItem">MODIFIEr ARTICLE</string>
    <string name="btnDeleteItem">SUPPRIMER ARTICLE</string>
    <string name="btnUpdateItem">METTRE A JOUR</string>
    <string name="strSureDeleteTitle">Supprimer </string>
    <string name="strSureDeleteMessage">Etes-vous sur de vouloir supprimer l\'article ci-dessus?\nL\'operation est irreversible.</string>
    <string name="connectToServerViaQR">Connection via QR</string>
    <string name="strSureUpdateTitle">Mis a jour de</string>
    <string name="strSureUpdateMessage">Etes-vous sur de vouloir mettre a jour l\'article ci-dessus?\nL\'operation est irreversible.</string>
    <string name="lblStockNewStock">Nouveau Stock</string>
    <string name="strStockHistory">HISTORIQUE DE STOCK</string>
    <string name="strAbout">A propos</string>
    <string name="msgAbout">Shopm Version 1.0\nDeveloped by @DoctaRhyf\nCopyright(c) 2019. All rights reserved</string>
    <string name="setTitleEmailReport">Email pour reception rapports</string>
    <string name="labelOriginPrice">Prix d achat</string>
</resources>
