<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentAddItem">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFormFieldsMendatory"
            android:padding="16dp"
            android:background="@color/red"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/strAllFieldsMedatory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/strItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/etItemName"
            android:hint="ex:Tomate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/strItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/etItemPrice"
            android:inputType="number"
            android:hint="ex:20000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvStockLabel"
            android:text="@string/strItemInitStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/etItemInitStock"
            android:inputType="number"
            android:hint="ex:50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/strItemDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/etItemDesc"
            android:hint="ex:Tomates freches"
            android:lines="5"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:text="@string/strItemPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <android.support.constraint.ConstraintLayout
            android:clickable="true"
            android:id="@+id/ivItemPicCont"
            android:background="#5c5cc6"
            android:layout_width="match_parent"
            android:layout_height="280dp">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="center"
                android:text="@string/chosePick"

                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/ivItemPic"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/btnAddItem"

            android:text="@string/btnAddItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>



</ScrollView>