<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FragmentSettings">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setTitleServerIP" />

    <EditText
        android:id="@+id/etServerIP"
        android:text="this is a sample"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setTitleExchRate" />

    <EditText
        android:id="@+id/etExchRate"
        android:text="1600"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setTitleEmailReport" />

    <EditText
        android:id="@+id/etEmail"

        android:text="1600"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--<TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setTitleMaxSellableItem" />

    <EditText
        android:visibility="gone"
        android:id="@+id/etMaxSellableItems"
        android:text="20"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />-->

</LinearLayout>