<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentViewItem">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:visibility="gone"
            android:src="@drawable/no_img_found"
            android:id="@+id/ivItemPic"
            android:layout_width="match_parent"
            android:layout_height="230dp" />


        <TextView
            android:id="@+id/tvItemName"
            android:text="Item Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvItemPrice"
            style="@style/styleTvPriceLarge"
            android:text="0 Fc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:text="Quantity"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    />

                <Spinner
                    android:id="@+id/spQty"
                    android:entries="@array/qty"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        <TextView
            style="@style/styleTvPriceLarge"
            android:id="@+id/tvItemTotalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnSellItem"
            android:onClick="sellItem"
            android:text="@string/btn_confirm_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/llItemSoldOut"
            android:visibility="gone"

            android:layout_width="match_parent"
            android:padding="16dp"

            android:background="@color/red"
            android:textAlignment="center"
            android:layout_height="wrap_content" >

            <TextView
                android:textColor="@color/white"
                android:text="@string/msgItemSoldOutTitle"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/msgItemSoldOutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>



    </LinearLayout>





</ScrollView>